# CellsInterlinked

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  ClientMain.cpp  conanfile.txt  doxygen.cfg
client/doc/: Doxyfile
client/include/application/: ClientApplication.h  Module.h
client/include/logging/: LogHelper.h
client/include/message/: Broker.h  Event.h  PollableQueue.h  Subscriber.h  SubscriberQueue.h  TestSubscriber.h
client/include/meta/: BuildInfo.h.in
client/include/monitor/: Monitor.h  MonitorDiscoverer.h  MonitorDiscovererFactory.h  MonitorDiscoveryModule.h  MonitorStateChangeEvent.h  MonitorStateManager.h  WindowsMonitorDiscoverer.h
client/include/mouse/: MouseCaptor.h  MouseCaptorFactory.h  MouseCaptureModule.h  WindowsMouse.h  WindowsMouseCaptor.h
client/include/network/: NetworkModule.h  Packet.h  PacketEventRegistry.h  SerializableClientEvent.h  SerializableClientEventPacketConverter.h  SerializableClientEventSubscriber.h
client/include/remote/: RemoteMonitor.h
client/include/util/: ComparisonUtil.h  DeserializationUtil.h  SerializationUtil.h  StringUtil.h
client/message/: Broker.h  Event.h  Subscriber.h  SubscriberQueue.h  TestEvent.h  TestSubscriber.h
client/message/src/: Broker.cpp  Event.cpp  SubscriberQueue.cpp  TestEvent.cpp  TestSubscriber.cpp
client/monitor/device/: Monitor.h  MonitorDiscoverer.h  MonitorDiscovererFactory.h  WindowsMonitorDiscoverer.h
client/monitor/device/src/: Monitor.cpp  MonitorDiscovererFactory.cpp  WindowsMonitorDiscoverer.cpp
client/src/: CMakeLists.txt  ClientMain.cpp
client/src/application/: ClientApplication.cpp  Module.cpp
client/src/logging/: LogHelper.cpp
client/src/message/: Broker.cpp  Event.cpp  SubscriberQueue.cpp  TestSubscriber.cpp
client/src/monitor/: Monitor.cpp  MonitorDiscovererFactory.cpp  MonitorDiscoveryModule.cpp  MonitorStateChangeEvent.cpp  MonitorStateManager.cpp  WindowsMonitorDiscoverer.cpp
client/src/mouse/: MouseCaptorFactory.cpp  MouseCaptureModule.cpp  WindowsMouse.cpp  WindowsMouseCaptor.cpp
client/src/network/: NetworkModule.cpp  Packet.cpp  SerializableClientEvent.cpp  SerializableClientEventPacketConverter.cpp
client/src/remote/: RemoteMonitor.cpp
client/src/util/: DeserializationUtil.cpp  SerializationUtil.cpp  StringUtil.cpp
client/template/meta/: BuildInfo.h.in
client/test/: CMakeLists.txt  ClientMainTest.cpp
client/test/application/: ModuleTest.cpp
client/test/message/: BrokerTest.cpp
client/test/monitor/: MonitorStateManagerTest.cpp  MonitorTest.cpp
client/test/remote/: RemoteMonitorTest.cpp
cmake/: BaseExecutableProject.cmake  ConanDownloader.cmake  ConfigureTemplateFiles.cmake
common/logging/: LogHelper.h
common/logging/src/: LogHelper.cpp
common/template/meta/: BuildInfo.h.in
server/: CMakeLists.txt  ServerMain.cpp  doxygen.cfg
server/src/: ServerMain.cpp
server/src/template/meta/: BuildInfo.h.in
server/template/meta/: BuildInfo.h.in
